# advent-of-code

./: .gitignore
2019/: Cargo.toml
2020/: Cargo.toml
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2021/: Cargo.toml  day24  tmp
2021-hs/: ChangeLog.md  README.md  aoc2021-hs.cabal  package.yaml
2021-hs/app/: Main.hs
2021-hs/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
2021/benches/: lanternfish.rs
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
2022/: Cargo.toml
2022-hs/: aoc2022-hs.cabal  package.yaml
2022-hs/app/: Main.hs
2022-hs/src/: Day1.hs
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
2023/: Cargo.toml
2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  (+5 more)
2024/: Cargo.toml
2024-hs/: aoc2024-hs.cabal
2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
2025-hs/: aoc2025-hs.cabal  package.yaml  stack.yaml
src/: day3.rs  main.rs
tools/: add_day  add_day_hs  download_input  template_day.hs  template_day.rs
(+9 files in other folders)
