[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Sebastian Paarmann <git@s-paarmann.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
itertools = "0.9.0"
nalgebra = "0.29.0"
num = "0.4.0"
rayon = "1.5.1"
bitvec = "0.22.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lanternfish"
harness = false
