[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Sebastian Paarmann <git@s-paarmann.de>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
miette = { version = "5.5.0", features = ["fancy"] }
nalgebra = "0.31.4"
regex = "1.7.0"
num = "0.4"
